# internal/api/models/email_verification.go
@@ -1,0 +1,6 @@
+package models
+
+type EmailVerification struct {
+	Email string `json:"-" gorm:"primarykey;index"`
+	Code  string `json:"code" gorm:"index"`
+}
